@@ -1,6 +1,6 @@
-var CloudFunc, exports, Util;
+var Util, exports, CloudFunc = {};
 
-(function(){
+(function(Util, CloudFunc, exports){
     'use strict';
     
     /** 
@@ -21,8 +21,7 @@ var CloudFunc, exports, Util;
         Util        = global.cloudcmd.main.util;
         CloudFunc   = exports;
     }
-    else
-        CloudFunc = {};
+
     
     /* Путь с которым мы сейчас работаем */
     CloudFunc.Path              = '';
@@ -365,4 +364,4 @@ var CloudFunc, exports, Util;
         
         return lFileTable;
     };
-})();
+})(Util, CloudFunc, exports);
